...
import me.jerryokafor.core.ui.widget.MovieRating
import me.jerryokafor.core.ui.widget.PeoplePoster
import me.onebone.toolbar.CollapsingToolbarScaffold
import me.onebone.toolbar.ScrollStrategy
import me.onebone.toolbar.rememberCollapsingToolbarScaffoldState

const val MOVIE_DETAILS_COL = "movies_details_col"
const val MOVIE_DETAILS_OVERVIEW = "movies_details_overview"
const val MOVIE_DETAILS_TRAILER_BUTTON = "movies_details_trailer_button"
const val MOVIE_DETAILS_MAIN_CAST = "movies_details_main_cast"
const val MOVIE_DETAILS_MAIN_CAST_ROW = "movies_details_main_cast_roe"
const val MOVIE_DETAILS_CREW = "movies_details_bottom_crew"
const val MOVIE_DETAILS_CREW_ROW = "movies_details_bottom_crew_row"
const val MOVIE_DETAILS_CATEGORIES = "movies_details_categories"
const val MOVIE_DETAILS_CATEGORIES_ROW = "movies_details_categories_row"
const val MOVIE_DETAILS_RECOMMENDATIONS = "movies_details_recommendations"
const val MOVIE_DETAILS_RECOMMENDATIONS_ROW = "movies_details_recommendations_row"
const val MOVIE_DETAILS_BOTTOM_BAR = "movies_details_bottom_bar"

@ThemePreviews
@Composable
@ExcludeFromGeneratedCoverageReport
fun MoviesDetailsPreview() {
    IheNkiriTheme {
        MoviesDetails(
            uiState =
                MoviesDetailViewModel.UIState(
                    title = "Fight Club",
//            overview = """
//                A ticking-time-bomb insomniac and a slippery soap salesman channel primal male
//                 aggression into a shocking new form of therapy. Their concept catches on, with
//                 underground \"fight clubs\" forming in every town, until an eccentric gets in the
//                 way and ignites an out-of-control spiral toward oblivion.
//            """.trimIndent(),
...
            BottomAppBar(
                modifier = Modifier.testTag(MOVIE_DETAILS_BOTTOM_BAR),
                actions = {
                    IconButton(onClick = onAddToWatchListClick) {
                        Icon(
                            imageVector = Icons.Filled.List,
                            contentDescription = "Add to watch list",
                        )
                    }
                    IconButton(onClick = onAddToBookmarkClick) {
                        Icon(
                            painterResource(id = me.jerryokafor.core.ui.R.drawable.baseline_bookmark_add_24),
                            contentDescription = "Add to bookmark",
                        )
                    }
                    IconButton(onClick = onRateItClick) {
                        Icon(
                            imageVector = Icons.Filled.Star,
                            contentDescription = "Rate it",
                        )
                    }
                },
                floatingActionButton = {
                    FloatingActionButton(
                        onClick = onAddToFavorite,
                        containerColor = BottomAppBarDefaults.bottomAppBarFabColor,
                        elevation = FloatingActionButtonDefaults.bottomAppBarFabElevation(),
                    ) {
                        Icon(
                            imageVector = Icons.Filled.FavoriteBorder,
                            contentDescription = "Add to favourite",
                        )
                    }
                },
            )
        }
    }
...
