...
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally,
    ) {
        Text(text = message)
        TwoVerticalSpacer()
        TextButton(modifier = modifier, onClick = onClick) {
            Text(text = "Back")
        }
    }
}

@ExcludeFromGeneratedCoverageReport
private fun testNetworkMovieDetails(movieId: Long): NetworkMovieDetails = NetworkMovieDetails(
...
            name = """
                Fight Club (1999) Trailer - Starring Brad Pitt, Edward Norton, 
                Helena Bonham Carter
            """.trimIndent(),
            official = false,
            publishedAt = "2016-03-05T02:03:14.000Z",
            site = "YouTube",
            size = 720,
            type = "Trailer",
        ),
        NetworkVideo(
            id = "5c9294240e0a267cd516835f",
            iso31661 = "en",
            iso6391 = "US",
            key = "BdJKm16Co6M",
            name = "#TBT Trailer",
            official = false,
            publishedAt = "2014-10-02T19:20:22.000Z",
            site = "YouTube",
            size = 1080,
            type = "Trailer",
        ),
...
