...
import me.jerryokafor.core.ds.theme.IheNkiriTheme
import me.jerryokafor.core.ds.theme.OneVerticalSpacer
import me.jerryokafor.core.ds.theme.TwoHorizontalSpacer
import me.jerryokafor.core.ui.components.IheNkiriCircularProgressIndicator
import java.time.format.DateTimeFormatter

internal const val VIMEO_PLAYER = "VIMEO_PLAYER"
internal const val YOUTUBE_PLAYER = "YOUTUBE_PLAYER"
internal const val VIDEO_LIST = "VIDEO_LIST"

@Preview
@Composable
@ExcludeFromGeneratedCoverageReport
private fun MediaScreenPreview() {
...
